# FlashPad

./: .gitignore  README.md  index.html  info.txt  package-lock.json  package.json  todo.md  tsconfig.json  vite.config.ts
.github/workflows/: build-fedora.yml  build-linux.yml  build-windows.yml  release.yml  sync-release-notes.yml
src/: App.svelte  DatabaseWindow.svelte  SettingsWindow.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  db.rs  folders.rs  main.rs  notes.rs  profiles.rs  scheduler.rs
src/lib/components/: ConfirmDialog.svelte  ContextMenu.svelte  DatabaseManagerModal.svelte  DatabaseManagerSection.svelte  MarkdownEditor.svelte  MarkdownHelpPanel.svelte  ResizeHandles.svelte  SettingsPanel.svelte  ShortcutsPanel.svelte  TitleBar.svelte  TreeNode.svelte  UpdateDialog.svelte  UpdateToast.svelte
src/lib/services/: autostartService.ts  backupService.ts  databaseService.ts  foldersService.ts  hotkeyService.ts  notesService.ts  settingsService.ts
src/lib/theme/: palettes.ts
