[package]
name = "flashpad"
version = "0.8.7"
edition = "2021"
authors = ["therbbt"]
description = "Global-hotkey quick-notes desktop app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
chrono = "0.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
regex = "1"
tauri-plugin-clipboard-manager = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
